# ghjko

./: Dockerfile  README.md  compose.yaml
areal_landing_px4_communication/areal_landing_px4_communication/areal_landing_px4_communication/: px4_vicon_pubsub.py
areal_landing_px4_communication/areal_landing_px4_communication/launch/: areal_landing_vicon.launch.py
areal_landing_uav_interfaces/areal_landing_uav_interfaces-main/: CMakeLists.txt  LICENSE.md  README.md  package.xml
areal_landing_uav_interfaces/areal_landing_uav_interfaces-main/action/: Autoland.action  BTDebug.action  PX4PosSetMove.action
areal_landing_uav_interfaces/areal_landing_uav_interfaces-main/srv/: PX4ArmingControl.srv  PX4OffboardControlMode.srv  PX4TrajectorySetpoint.srv  PX4VehicleCommand.srv
vicon_sdk/: sdk_libs_1.12.sh
vicon_tracker_ros/: CMakeLists.txt  Old_CMakeLists.txt  package.xml  setup.py
vicon_tracker_ros/config/: vicon_tracker_client_params.yaml
vicon_tracker_ros/launch/: vicon_tracker_client.launch.py
vicon_tracker_ros/src/: pose_to_odometry.cpp  pose_to_odometry.py  vicon_to_odometry_node.cpp  vicon_to_px4.cpp  vicon_tracker_client.cpp
